# ferriscope

./: 404.html  CNAME  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml  generate_traffic.sh  index.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
.github/workflows/: deploy.yml  test.yml
advanced/: filter-syntax.html  performance.html  troubleshooting.html
benches/: analyzer_bench.rs  capture_bench.rs  filter_bench.rs
development/: building.html  contributing.html
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/advanced/: filter-syntax.md  performance.md  troubleshooting.md
docs/src/development/: building.md  contributing.md
docs/src/user-guide/: basic-usage.md  filtering.md  installation.md  interface-controls.md  platform-specific.md  quick-start.md
src/: analyzer.rs  capture.rs  filters.rs  lib.rs  main.rs  ui.rs
user-guide/: basic-usage.html  filtering.html  installation.html  interface-controls.html  platform-specific.html  quick-start.html
