[package]
name = "ferriscope"
version = "0.1.0"
edition = "2021"

[dependencies]
pcap = "1.1.0"
tokio = { version = "1.28", features = ["full"] }
clap = { version = "4.3", features = ["derive"] }
tui = "0.19"
crossterm = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
dns-parser = "0.8"
etherparse = "0.13"
ctrlc = "3.4"
chrono = "0.4"
ratatui = "0.29.0"



